@@ -55,7 +55,7 @@ public:
 	// ========================================================================
 	//  general
 	// ========================================================================
-	std::string		passtable_;					// encryption table
+
 
 protected:
 	// ========================================================================
